# safe-pc

./: .dockerignore  .gitignore  404.html  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  dev-env.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  safety_config.xml  sitemap.xml
ansible/docs/: safepc_ansible.md
ansible/inventory/: hosts.yml
capstone/: scripts.py  tasks.py
capstone/proxmox/: iso_downloader.py
capstone/proxmox/answer_file/: answer.py  answer_file.py  constants.py  utils.py
capstone/proxmox/auto_installer/: answer_server.py
capstone/proxmox/iso/: answer_server.py  downloader.py
capstone/proxmox/iso/bash_scripts/: discovery.sh  dynamic-auto-install.sh  gen_answer.sh
capstone/utils/: __init__.py  crypto.py  entropy.py  logs.py  tzd.py
docs/: index.md
docs/reference/: crypto.md
docs/reference/proxmox/: iso_downloader.md
docs/reference/utils/: crypto.md  downloader.md  index.md  logs.md
reference/crypto/: index.html
reference/proxmox/iso_downloader/: index.html
reference/utils/: index.html
reference/utils/crypto/: index.html
reference/utils/downloader/: index.html
reference/utils/logs/: index.html
scripts/: build.py
src/proxmox_auto_installer/: __init__.py  constants.py
src/proxmox_auto_installer/answer_file/: __init__.py  _global.py  answer_file.py  cached_answers.py  disk.py  network.py
src/proxmox_auto_installer/back_end/: helpers.py  http_routes.py  https_routes.py  iso_jobs.py  server.py
src/proxmox_auto_installer/front_end/static/css/: tailwind.css
src/proxmox_auto_installer/front_end/static/js/: api.js  history-detail.js  history.js
src/proxmox_auto_installer/front_end/static/js/prox-iso-installer/: createIso.js  download-page.js  formElements.js  helpers.js  index.js  validators.js
src/proxmox_auto_installer/front_end/static/js/utils/: alert.js  back-button.js  crypto.js  hot-reload.js  online-status.js
src/proxmox_auto_installer/front_end/tailwindcss/: LICENSE.txt  nodemon.json  package.json
src/proxmox_auto_installer/front_end/tailwindcss/styles/: app.css
src/proxmox_auto_installer/front_end/templates/: base.html
src/proxmox_auto_installer/front_end/templates/layouts/: main.html
src/proxmox_auto_installer/front_end/templates/pages/: 404.html  history-detail.html  history.html  iso-download.html  main.html
src/proxmox_auto_installer/front_end/templates/partials/components/: alert.html  footer.html  header.html  iso-card.html  loading-spinner.html
src/proxmox_auto_installer/front_end/templates/partials/modals/: create-iso.html
src/proxmox_auto_installer/iso/: downloader.py  helpers.py  iso.py  tools.py
src/proxmox_auto_installer/scripts/: build_css.py  run_dev.py
src/proxmox_auto_installer/utils/: __init__.py  ccodes.txt  country_codes.py  jwt.py  tzd.py  tzs.txt
src/safe_pc/: utils.py
src/safe_pc/proxmox_auto_installer/: __init__.py
src/safe_pc/proxmox_auto_installer/answer_file/: __init__.py  _global.py  answer_file.py  cached_answers.py  disk.py  global.py  network.py
src/safe_pc/proxmox_auto_installer/back_end/: helpers.py  http_routes.py  https_routes.py  iso_jobs.py  routes.py  server.py
src/safe_pc/proxmox_auto_installer/back_end/routes/: base.py  routes.py
src/safe_pc/proxmox_auto_installer/back_end/routes/api/: __init__.py  api.py
src/safe_pc/proxmox_auto_installer/front_end/static/css/: tailwind.css
src/safe_pc/proxmox_auto_installer/front_end/static/js/: api.js  header-height.js  hot-reload.js
src/safe_pc/proxmox_auto_installer/front_end/tailwindcss/: package-lock.json  package.json
src/safe_pc/proxmox_auto_installer/front_end/tailwindcss/styles/: app.css
src/safe_pc/proxmox_auto_installer/front_end/templates/: base.html
src/safe_pc/proxmox_auto_installer/iso/: downloader.py  extractor.py  helpers.py  iso.py  tools.py
src/safe_pc/proxmox_auto_installer/iso/bash_scripts/: discovery.old.sh  discovery.sh  discovery.t.sh
src/safe_pc/proxmox_auto_installer/scripts/: build_css.py  run_dev.py
src/safe_pc/proxmox_auto_installer/utils/: __init__.py  country_codes.py  download.py  downloader.py  initrd_utils.py  jwt.py  tzd.py  tzs.txt
src/safe_pc/utils/: __init__.py  logs.py  utils.py
src/safe_pc/utils/crypto/: X509.py  __init__.py  crypto.py  dpapi.py  entropy.py  temp_key_file.py
src/safe_pc/utm/: iso_dl.py
src/safe_pc/utm/utils/: __init__.py  logs.py  utils.py
src/safe_pc/utm/utils/crypto/: X509.py  __init__.py  crypto.py
src/utm/: __main__.py  pyproject.toml
src/utm/opnsense/: __init__.py  downloader.py  install_and_configure.py  installer.py  opnsense.py  vm_creator.py  xml_merger.py  xml_template_sync.py
src/utm/opnsense/iso/: __init__.py  constants.py  downloader.py  helpers.py
src/utm/opnsense/pexpect_drivers/: __init__.py  file_c_streamer.py  installer.py  post_install_config.py  xml_sync_driver.py
src/utm/proxmox/: iommu.py  system.py  vms.py
src/utm/scripts/: post_install.py  post_startup.py
src/utm/utils/: __init__.py  console_driver.py  iso_dl.py  logs.py  quorum.py  time.py  utils.py
src/utm/utils/crypto/: X509.py  __init__.py  crypto.py  temp_key_file.py
tests/: conftest.py
tests/proxmox/: test_iso_downloader.py
tests/proxmox/answer_file/: test_answer.py  test_utils.py
tests/proxmox/iso/: test_downloader.py
tests/proxmox_auto_installer/answer_file/: test_answer_file.py  test_disk.py  test_global.py  test_network.py
tests/proxmox_auto_installer/iso/: test_downloader.py
tests/utils/: test_utils.py
tests/utm/opensense/: test_contants.py
(+20 files in other folders)
