[project]
name = "safe_pc.utm"
version = "0.1.0"
description = "Standalone UTM submodule (used within safe_pc)"
authors = [
    {name = "Anthony Tropeano",email = "anthonytropeano@me.com"}
]

requires-python = ">=3.12"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "ansible (>=12.1.0,<13.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "platformdirs (>=4.5.0,<5.0.0)",
]

[tool.poetry]
packages = [{ include = "utm", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
"dl-opnsense-iso" = "utm.opnsense.opnsense:main"